--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -18,8 +18,8 @@
                         <p class="letra">Localidad</p>
                         <input type="text" class="form-control fondoi" id="Localidad" autocomplete="off">
                         <p class="letra">Club</p>
-                        <input type="text" class="form-control fondoi" id="Club" autocomplete="off">
-                        <p>puntos</p>
+                        @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi"})
+                        <p class="letra">puntos</p>
                         <input type="number" class="form-control fondoi" id="Puntos" autocomplete="off">
                     </div>
                     <div class="modal-footer">
