--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<TesisPadel.Models.Usuario>
+@model TesisPadel.Models.Usuario;
 
 @{
     ViewData["Title"] = "Usuario";
@@ -7,27 +7,27 @@
 <div>
     <h1 class="display-4 titulo bajar">Complete sus datos</h1>
 
-    <div style="margin-left: 5%;">
+    <div style="margin-left: 5%; margin-top:8%">
         <div class="row">
             <div class="col-md-6 ">
                 <p>Nombre y Apellido</p>
-                <input type="text" style="width : 450px; heigth : 400px class=" from-control" id="Nombre"
+                <input type="text" style="width : 80%; height: 55%;" class=" from-control borde" id="Nombre"
                     autocomplete="off">
             </div>
             <div class="col-md-4 ">
                 <p>Localidad</p>
-                <input type="text" style="width : 450px; heigth : 400px class=" from-control" id="Localidad"
+                <input type="text" style="width : 133%; height: 55%;" class=" from-control borde" id="Localidad"
                     autocomplete="off">
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 ">
                 <p>Club</p>
-                <input style="width: 450px; heigth: 400px" type="text" class="from-control" id="Club">
+                @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control borde", @style="width : 80%; height: 55%;" })
             </div>
             <div class="col-md-4">
                 <p>Telefono</p>
-                <input type="number" style="width : 450px; heigth : 400px class=" from-control" id="Telefono"
+                <input type="number" style="width : 133%; height: 55%;" class=" from-control borde" id="Telefono"
                     autocomplete="off">
             </div>
         </div>
@@ -36,24 +36,39 @@
         <div class="row">
             <div class="col-md-6">
                 <p>DNI</p>
-                <input style="width : 450px; heigth : 400px" type="number" class="from-control" id="DNI"
+                <input style="width : 80%; height: 55%;" type="number" class="from-control borde" id="DNI"
                     autocomplete="off">
             </div>
             <div class="col-md-4">
                 <p>Genero</p>
-                <select name="Genero" id="Genero" style="width : 450px; height: 45%;">
-                    <option value=""></option>
+                <select name="Genero" id="Genero" style="width : 133%; height: 55%;">
+                    <option value="0">Seleccione su genero</option>
                     <option value="1"> Masculino</option>
                     <option value="2">Femenino</option>
                 </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class=" col-md-6">
+            <p style="">Categoria</p>
+            <select name="Categoria" id="Categoria" style="width : 80%;; height: 55%;">
+                    <option value="0">Seleccione su Categoria</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                </select>
+        </div>
         </div>
     </div>
-</div>
 
 </div>
-<button style="margin-left: 44%;" type="button" onclick="GuardarUsuario()" class="button-87"
+<button style="margin-left: 43%;" type="button" onclick="GuardarUsuario()" class="button-87"
     role="button">Guardar</button>
-</div>
 <div>
     <table class="table table-dark table-bordered table-striped">
         <thead>
@@ -63,8 +78,9 @@
                 <th scope="col" class="lt">Telefono</th>
                 <th scope="col" class="lt">DNI</th>
                 <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt"> Genero</th>
-                <th scope="col" class="lt" style="width: 25% !important;">#</th>
+                <th scope="col" class="lt">Genero</th>
+                <th scope="col" class="lt">Categoria</th>
+                <th scope="col" class="lt" style="width: 22% !important;"></th>
             </tr>
         </thead>
         <tbody id="tbody-usuario"></tbody>
