Vista usuario lista✔️✔️

--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -73,11 +73,11 @@
     <table class="table table-dark table-bordered table-striped">
         <thead>
             <tr>
-                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt" style="width: 22% !important;">Nombre</th>
                 <th scope="col" class="lt">Localidad</th>
                 <th scope="col" class="lt">Telefono</th>
                 <th scope="col" class="lt">DNI</th>
-                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt" style="width: 22% !important;">Club</th>
                 <th scope="col" class="lt">Genero</th>
                 <th scope="col" class="lt">Categoria</th>
                 <th scope="col" class="lt" style="width: 22% !important;"></th>
