--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -1,6 +1,6 @@
 @model TesisPadel.Models.Ranking;
 @{
-    ViewData["Title"] = "club";
+    ViewData["Title"] = "Ranking";
 }
 @* MODAL *@
 <div class="modal fade" id="ModalRanking" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -14,13 +14,13 @@
                     <input name="ClubId" type="hidden" id="ClubId" value="0" class="letra">
                     <div class="control-label">
                         <p class="letra">Nombre</p>
-                        <input type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
-                        <p class="letra">Localidad</p>
-                        <input type="text" class="form-control fondoi" id="Localidad" autocomplete="off">
-                        <p class="letra">Club</p>
-                        @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi"})
+                        @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control fondoi"})
+                        @* <p class="letra">Club</p>
+                        @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi"}) *@
                         <p class="letra">puntos</p>
                         <input type="number" class="form-control fondoi" id="Puntos" autocomplete="off">
+                        <p>Categoria</p>
+
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
@@ -42,7 +42,6 @@
         <thead>
             <tr>
                 <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Localidad</th>
                 <th scope="col" class="lt">Club</th>
                 <th scope="col" class="lt">Puntos</th>
                 <th style="width: 30% !important;" scope="col" class="lt"></th>
