Nueva base de datos

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -69,62 +69,62 @@
     <div class="cards" style="width: 10rem;">
      <a href="https://www.facebook.com/profile.php?id=100080628576874"><img class="card-img-top " src="~/css/img/paquita.png" alt="CardI image cap"></a> 
       <div class="card-body2">
-        <h5 class="card-title">La Paquita</h5>
+        <h5 class="card-title"  style="text-align: center;">La Paquita</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
     <a href="https://www.facebook.com/profile.php?id=100064522097167"><img class="card-img-top" src="~/css/img/chipion_1.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">Chipion</h5>
+        <h5 class="card-title"  style="text-align: center;">Chipion</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
      <a href="https://www.facebook.com/clubcentrosocial"><img class="card-img-top" style="background-image: 20%;" src="~/css/img/centro.png" alt="Card-image-cap"></a> 
       <div class="card-body2">
-        <h5 class="card-title">Centro</h5>
+        <h5 class="card-title" style="text-align: center;">Centro</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
     <a href="https://www.facebook.com/mundosanjorge/photos?locale=es_LA"><img class="card-img-top" src="~/css/img/san-jorge.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">San Jorge</h5>
+        <h5 class="card-title" style="text-align: center;">San Jorge</h5>
       </div>
     </div>
 
     <div class="cards" style="width: 10rem;">
      <a href="https://www.facebook.com/tiromorterosoficial"> <img class="card-img-top" src="~/css/img/tiro.png" alt="Card-image-cap"></a>
       <div class="card-body2">
-        <h5 class="card-title">Tiro Federal</h5>
+        <h5 class="card-title" style="text-align: center;">Tiro Federal</h5>
       </div>
     </div>
    
     <div class="cards" style="width: 10rem; margin-top: 2%">
     <a href="https://www.facebook.com/elnuevedemorteros"><img class="card-img-top" src="~/css/img/9-de-morteros.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">9 de morteros</h5>
+        <h5 class="card-title" style="text-align: center;">9 de morteros</h5>
       </div>
     </div>
     
     <div class="cards" style="width: 10rem; margin-top: 2%">
     <a href="https://www.facebook.com/profile.php?id=100066839164805"><img class="card-img-top" src="~/css/img/suardi.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">Suardi</h5>
+        <h5 class="card-title" style="text-align: center;">Suardi</h5>
       </div>
     </div> 
     
     <div class="cards" style="width: 10rem; margin-top: 2%">
     <a href="https://www.facebook.com/clubatletico.libertadtrinidad.54"><img class="card-img-top" src="~/css/img/villa-trinidad.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">Villa Trinidad</h5>
+        <h5 class="card-title"  style="text-align: center;">Villa Trinidad</h5>
       </div>
     </div>
   <div class="cards" style="width: 10rem;margin-top: 2%">
     <a href="https://www.facebook.com/portena.deportiva"><img class="card-img-top" src="~/css/img/porteña.png" alt="Card-image-cap"></a>  
       <div class="card-body2">
-        <h5 class="card-title">Porteña</h5>
+        <h5 class="card-title"  style="text-align: center;">Porteña</h5>
       </div>
     </div>
 
