--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -45,7 +45,7 @@
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
 
-                      <a href="#" class="btn mt-4" onclick="IniciarSesion()" role="button">Iniciar sesiónn</a>
+                      <a href="#" class="btn mt-4" onclick="IniciarSesion()" role="button">Iniciar sesión</a>
                       <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
                   </div>
