--- a/Views/Usuario/IndexAdmi.cshtml
+++ b/Views/Usuario/IndexAdmi.cshtml
@@ -1,8 +1,8 @@
-@* @model TesisPadel.Models.Usuario;
+@model TesisPadel.Models.Usuario;
 @{
     ViewData["Title"] ="Jugadores";
 }
- <div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header fondom">
@@ -34,13 +34,14 @@
     <table class="table table-dark table-bordered table-striped">
         <thead>
             <tr>
-                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt" style="width: 22% !important;">Nombre</th>
                 <th scope="col" class="lt">Localidad</th>
                 <th scope="col" class="lt">Telefono</th>
                 <th scope="col" class="lt">DNI</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt"> Genero</th>
-                <th scope="col" class="lt" style="width: 25% !important;">#</th>
+                <th scope="col" class="lt" style="width: 22% !important;">Club</th>
+                <th scope="col" class="lt">Genero</th>
+                <th scope="col" class="lt">Categoria</th>
+                <th scope="col" class="lt" style="width: 22% !important;"></th>
             </tr>
         </thead>
         <tbody id="tbody-usuario"></tbody>
@@ -48,4 +49,4 @@
 </div>
 @section Scripts{
     <script src="~/js/usuario-1.0.0.js"></script>
-} *@
+}
