--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -48,6 +48,98 @@
             Actualizar
         </button>
     </div>
+        <h2 style="text-align: center;">1°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">2°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">3°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">4°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">5°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">6°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">7°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped">
+        <thead>
+            <tr>
+                <th scope="col" class="lt">Nombre</th>
+                <th scope="col" class="lt">Club</th>
+                <th scope="col" class="lt">Puntos</th>
+                <th style="width: 30% !important;" scope="col" class="lt"></th>
+            </tr>
+        </thead>
+        <tbody id="tbody-ranking">
+        </tbody>
+    </table>
+    <h2 style="text-align: center;">8°Categoria</h2>
     <table class="table table-dark table-bordered table-striped">
         <thead>
             <tr>
