--- a/Views/Categoria/Index.cshtml
+++ b/Views/Categoria/Index.cshtml
@@ -1,8 +1,8 @@
 @model TesisPadel.Models.Categoria;
 @{
-   ViewData["Title"] = "Categoria";
+    ViewData["Title"] = "Categoria";
 }
-    <div class="modal fade" id="ModalCategoria" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ModalCategoria" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header fondom">
@@ -11,7 +11,7 @@
                 </div>
                 <form id="files" method="post" enctype="multipart/form-data">
                 <div class="modal-body fondom">
-                    <input name="ClubId" type="hidden" id="CategoriaId" value="0" class="letra">
+                    <input name="CategoriaId" type="hidden" id="CategoriaId" value="0" class="letra">
                     <div class="control-label">
                         <p class="letra">Nombre</p>
                         <input name="tipo" type="text" class="form-control fondoi" id="Tipo" autocomplete="off">
@@ -25,20 +25,26 @@
                 </form>
             </div>
         </div>
-
-    <table class="table table-dark table-bordered table-striped">
+</div>
+<h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Categoria</h1>
+<div>
+        <div class="mb-2">
+            <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
+                data-bs-target="#ModalCategoria">
+                Nuevo
+            </button>
+        </div>
+<div> <table class="table table-dark table-bordered table-striped">
         <thead>
             <tr>
-                <th scope="col" class="lt">Tipo</th>
+                <th scope="col" class="lt">Categorias</th>
 
                 <th style="width: 22% !important;" scope="col" class="lt"></th>
             </tr>
         </thead>
         <tbody id="tbody-categoria">
         </tbody>
-    </table>
-
-</div>
+    </table></div>
 @section Scripts{
     <script src="~/js/categoria.js"></script>
 }
