--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a class="BTN nav-link" asp-area="" asp-controller="Categoria" asp-action="Index">Categoria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="/Usuario/IndexAdmi" asp-controller="Usuario" asp-action="Index">Usuario</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Usuario</a>
                         </li> 
                     </ul>
                     <partial name="_LoginPartial"/>
