Vista Usuario Actualizada👌👌

--- a/Views/Usuario/IndexAdmi.cshtml
+++ b/Views/Usuario/IndexAdmi.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] ="Jugadores";
 }
-<div class="modal fade" id="ModalClub" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="ModalUsuario" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header fondom">
@@ -11,7 +11,7 @@
                 </div>
                 <form id="files" method="post" enctype="multipart/form-data">
                 <div class="modal-body fondom">
-                    <input name="ClubId" type="hidden" id="ClubId" value="0" class="letra">
+                    <input name="UsuarioId" type="hidden" id="ClubId" value="0" class="letra">
                     <div class="control-label">
                         <p class="letra">Nombre</p>
                         <input name="Nombre" type="text" class="form-control fondoi" id="Nombre" autocomplete="off">
