--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -11,26 +11,16 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body fondom">
-                <input name="ClubId" type="hidden" id="ClubId" value="0" class="letra">
+                <input name="RankingId" type="hidden" id="RankingId" value="0" class="letra">
                 <div class="control-label">
-                    <p class="letra">Nombre</p>
-                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control fondoi"})
+                    <p class="letra">Jugador</p>
+                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control fondoi" })
                     <p class="letra">Club</p>
-                    @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi"})
-                    <p class="letra">puntos</p>
+                    <input type="text" disabled class="form-control" id="ClubNombreJugador" />
+                    <p class="letra">Categoría</p>
+                    <input type="text" disabled class="form-control" id="CategoriaNombreJugador" />                    
+                    <p class="letra">Puntos</p>
                     <input type="number" class="form-control fondoi" id="Puntos" autocomplete="off">
-                    <p class="letra">Categoria</p>
-                    <select name="Categoria" id="Categoria" class="form-control fondoi">
-                        <option value="0">Seleccione su Categoria</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                    </select>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
@@ -40,6 +30,7 @@
         </div>
     </div>
 </div>
+
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Posiciones</h1>
 <div>
     <div class="mb-2">
@@ -48,111 +39,111 @@
             Actualizar
         </button>
     </div>
-        <h2 style="text-align: center;">1°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
+    <h2 style="text-align: center;">1°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped" id="cat1">
         <thead>
             <tr>
                 <th scope="col" class="lt">Nombre</th>
                 <th scope="col" class="lt">Club</th>
                 <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
+                <th style="width: 18% !important;" scope="col" class="lt"></th>
             </tr>
         </thead>
         <tbody id="tbody-ranking">
         </tbody>
     </table>
-    <h2 style="text-align: center;">2°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    @* <h2 style="text-align: center;">2°Categoria</h2>
+    <table class="table table-dark table-bordered table-striped" id="cat2">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">3°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat3">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">4°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat4">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">5°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat5">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">6°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat6">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">7°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat7">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
     <h2 style="text-align: center;">8°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 30% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
+    <table class="table table-dark table-bordered table-striped" id="cat8">
+    <thead>
+    <tr>
+    <th scope="col" class="lt">Nombre</th>
+    <th scope="col" class="lt">Club</th>
+    <th scope="col" class="lt">Puntos</th>
+    <th style="width: 18% !important;" scope="col" class="lt"></th>
+    </tr>
+    </thead>
+    <tbody id="tbody-ranking">
+    </tbody>
     </table>
-</div>
-@section Scripts{
-    <script src="~/js/Ranking-1.0.0.js"></script>
-}
+    </div> *@
+    @section Scripts {
+        <script src="~/js/Ranking-1.0.0.js"></script>
+    }
