--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,8 +6,8 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
 <body class="LogIn ">
+  
   <div class="section">
     <div class="container">
       <div class="row full-height justify-content-center">
@@ -46,6 +46,7 @@
                       </div>
 
                       <a href="#" class="btn mt-4" onclick="IniciarSesion()" role="button">Iniciar sesión</a>
+                      <div class="loader"></div>
                       <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
                   </div>
@@ -71,6 +72,7 @@
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
                         <a id="btn-register" class="btn mt-4" role="button">Registrarse</a>
+                        <div class="loader"></div>
                       </div>
                     </div>
                   </div>
