--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TesisPadel.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/808781cc1c.js" crossorigin="anonymous"></script>
-    @* <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetalert2.all.min.js"></script> *@
+    <script src="~/js/sweetalert2.js"></script> 
 </head>
-
 <body>
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark fixed-top">
