--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -14,7 +14,7 @@
                 <input name="RankingId" type="hidden" id="RankingId" value="0" class="letra">
                 <div class="control-label">
                     <p class="letra">Jugador</p>
-                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control fondoi" })
+                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control " })
                     <p class="letra">Club</p>
                     <input type="text" disabled class="form-control" id="ClubNombreJugador" />
                     <p class="letra">Categoría</p>
@@ -23,8 +23,11 @@
                     <select class="form-control" id="Puntos">
                         <option value="0">0</option>
                         <option value="10">10</option>
+                        <option value="15">15</option>
                         <option value="20">20</option>
                         <option value="40">40</option>
+                        <option value="60">60</option>
+                        <option value="80">80</option>
                         <option value="100">100</option>
                     </select>
                 </div>
@@ -49,11 +52,6 @@
     <div id="div-categorias">
 
     </div>
-
-
-
-
-
     @section Scripts {
         <script src="~/js/Ranking-1.0.0.js"></script>
     }
