--- a/Views/Ranking/IndexF.cshtml
+++ b/Views/Ranking/IndexF.cshtml
@@ -13,12 +13,23 @@
             <div class="modal-body fondom">
                 <input name="RankingId" type="hidden" id="RankingId" value="0" class="letra">
                 <div class="control-label">
-                    <p class="letra">Nombre</p>
-                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control fondoi"})
+                    <p class="letra">Jugador</p>
+                    @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control " })
                     <p class="letra">Club</p>
-                    @Html.DropDownList("ClubId", null, htmlAttributes: new { @class = "form-control fondoi"})
-                    <p class="letra">puntos</p>
-                    <input type="number" class="form-control fondoi" id="Puntos" autocomplete="off">
+                    <input type="text" disabled class="form-control fondoi" id="ClubNombreJugador" />
+                    <p class="letra">Categoría</p>
+                    <input type="text" disabled class="form-control fondoi" id="CategoriaNombreJugador" />
+                    <p class="letra">Puntos</p>
+                    <select class="form-control fondoi" id="Puntos">
+                        <option value="0">0</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                        <option value="40">40</option>
+                        <option value="60">60</option>
+                        <option value="80">80</option>
+                        <option value="100">100</option>
+                    </select>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="button-8" role="button" data-bs-dismiss="modal">Cerrar</button>
@@ -28,6 +39,7 @@
         </div>
     </div>
 </div>
+
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Posiciones</h1>
 <div>
     <div class="mb-2">
@@ -36,111 +48,18 @@
             Actualizar
         </button>
     </div>
-        <h2 style="text-align: center;">1°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF1">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18%!important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">2°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF2">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">3°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF3">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">4°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF4">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">5°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF5">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">6°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF6">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">7°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="catF7">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-    <h2 style="text-align: center;">8°Categoria</h2>
-    <table class="table table-dark table-bordered table-striped" id="caFt8">
-        <thead>
-            <tr>
-                <th scope="col" class="lt">Nombre</th>
-                <th scope="col" class="lt">Club</th>
-                <th scope="col" class="lt">Puntos</th>
-                <th style="width: 18% !important;" scope="col" class="lt"></th>
-            </tr>
-        </thead>
-        <tbody id="tbody-ranking">
-        </tbody>
-    </table>
-</div>
-@section Scripts{
-    <script src="~/js/RankingF-1.0.0.js"></script>
-}
+
+    <div id="div-categorias">
+
+    </div>
+
+
+
+
+
+    @section Scripts {
+        <script src="~/js/Ranking-1.0.0.js"></script>
+    }
+    @* @section Scripts{
+    <script src="~/js/RankingF-1.0.0.js"></script> *@
+    }
