--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -28,7 +28,7 @@
             <label for="reg-log"></label> 
 
             @* seccion iniciar sesion *@
-            <div class="card-3d-wrap mx-auto" href="#IS">
+            <div class="card-3d-wrap mx-auto" >
               <div class="card-3d-wrapper">
                 <div class="card-front">
                   <div class="center-wrap">
@@ -45,8 +45,9 @@
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
 
-                      <a href="#" class="btn mt-4" onclick="IniciarSesion()" role="button">Iniciar sesión</a>
-                      <div class="loader"></div>
+                      <a href="#" class="button-87" role="button" onclick="IniciarSesion()" role="button">Iniciar sesión</a>
+                      <div class="loader "></div>
+                      
                       <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Olvide mi contraseña</a></p>
                     </div>
                   </div>
@@ -71,7 +72,7 @@
                             id="regrtpass" autocomplete="off">
                           <i class="input-icon uil uil-lock-alt"></i>
                         </div>
-                        <a id="btn-register" class="btn mt-4" role="button">Registrarse</a>
+                        <a id="btn-register" class="button-87" role="button">Registrarse</a>
                         <div class="loader"></div>
                       </div>
                     </div>
