--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -41,8 +41,13 @@
 </div>
 
 <h1 class="display-4 titulo bajar" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Posiciones</h1>
+
 <div>
     <div class="mb-2">
+        @* <button class="button-87" role="button" href="@Url.Action("MostrarRankingFemenino", "Ranking")">Ranking
+        Femenino</button> *@
+        @* <a class="button-87" role="button" href="@Url.Action("MostrarRankingFemenino", "Ranking")">Ranking
+        Femenino</a> *@
         <button type="button" onclick="VaciarFormulario()" class="button-87" role="button" data-bs-toggle="modal"
             data-bs-target="#ModalRanking">
             Actualizar
