--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -953,6 +953,7 @@ img {
   padding: 12px 20px;
   text-align: center;
   text-transform: uppercase;
+  text-decoration: none;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
@@ -1113,8 +1114,32 @@ circle {
 path {
   fill: #fff;
 }
-/*CARGADOR*/
+/* CARGADOR */
 .loader {
+  width: 50px;
+  padding-left: 15%;
+  padding: 8px;
+  aspect-ratio: 1;
+  display: none;
+  position: absolute;
+  border-radius: 50%;
+  background: #25b09b;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+  /* transform: translate(-50%, -50%); */
+}
+@keyframes l3 {to{transform: rotate(1turn)}} 
+/* .loader {
+  display: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
   width: 50px;
   padding: 8px;
   aspect-ratio: 1;
@@ -1128,5 +1153,6 @@ path {
   -webkit-mask-composite: source-out;
           mask-composite: subtract;
   animation: l3 1s infinite linear;
+  transform: translate(-50%, -70%);
 }
-@keyframes l3 {to{transform: rotate(1turn)}}
+@keyframes l3 {to{transform: rotate(1turn)}} */
